# yuno_c

./: .env.example  .gitignore  CMakeLists.txt  README.md
include/: bot.h  config.h  database.h
include/commands/: fun.h  moderation.h  utility.h
include/modules/: auto_cleaner.h  spam_filter.h  terminal.h
src/: bot.c  config.c  database.c  main.c
src/commands/: fun.c  moderation.c  utility.c
src/modules/: auto_cleaner.c  spam_filter.c  terminal.c
